Removing unused APIs
